--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,15 @@ layout: default
       </time>
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {%- endif -%}</p>
+      {%- endif -%}
+
+      {% if page.tags.size > 0 %}
+        • tagged
+        {% for tag in page.tags %}
+          <span class="post-tag">{{ tag }}</span>
+        {% endfor %}</p>
+      {% endif %}
+
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
