Update color scheme

--- a/_sass/my_styles.scss
+++ b/_sass/my_styles.scss
@@ -1,6 +1,6 @@
-$my_bg: #ddd !default;
-$my_links: #090 !default;
-$my_code: #eee !default;
+$my_bg: #bdd !default;
+$my_links: #477 !default;
+$my_code: #dee !default;
 
 .site-header {
   background-color: $my_bg;
